added 2-3 info rows

--- a/src/app/covid-info/covid-info.component.html
+++ b/src/app/covid-info/covid-info.component.html
@@ -1,134 +1,7 @@
 <div class="info-container">
-    <div class="row general-info">
-        <div class="col new-verified">
-            <div class="headline-container">
-                <p class="headline">מאומתים חדשים אתמול</p>
-                <span class="info-icon">i</span>
-            </div>
-            <div class="info">
-                <p class="number">1,226</p>
-                <div class="added" style="display: flex;">
-                    <p class="value">+645</p>
-                    <p class="title">מחצות</p>
-                </div>
-                <div class="added total" style="display: flex;">
-                    <p class="value">826,609</p>
-                    <p class="title">סה"כ</p>
-                </div>
-            </div>
-        </div>
-        <div class="col active-patients">
-            <div class="headline-container">
-                <p class="headline">חולים פעילים</p>
-                <span class="info-icon">i</span>
-            </div>
-            <div class="info">
-                <p class="number">19,808</p>
-                <div class="added" style="display: flex;">
-                    <p class="value">-1,612</p>
-                    <p class="title">מחצות</p>
-                </div>
-                <div class="patients-locations" style="display: flex;">
-                    <div class="home">
-                        <p class="title">
-                            בית / קהילה
-                        </p>
-                        <p class="value">18,794</p>
-                    </div>
-                    <div class="hotel">
-                        <p class="title">
-                            מלון
-                        </p>
-                        <p class="value">
-                            160
-                        </p>
-                    </div>
-                    <div class="hospital">
-                        <p class="title">
-                            בי"ח
-                        </p>
-                        <p class="value">
-                            854
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col hospitalized-patients">
-            <div class="headline-container">
-                <p class="headline">חולים קשה</p>
-                <span class="info-icon">i</span>
-            </div>
-            <div class="info">
-                <p class="number">557</p>
-                <div class="added" style="display: flex;">
-                    <p class="value">-15</p>
-                    <p class="title">מחצות</p>
-                </div>
-                <div class="patients-condition">
-                    <ul>
-                        <li>מתוכם קריטי 246</li>
-                        <li> מונשמים 202</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col vaccinated">
-            <div class="headline-container">
-                <p class="headline">מתחסנים מנה ראשונה </p>
-            </div>
-            <div class="first-vaccine">
-                <p class="number">557</p>
-                <div class="added" style="display: flex;">
-                    <p class="value">-15</p>
-                    <p class="title">מחצות</p>
-                </div>
-            </div>
-            <hr>
-            <div class="headline-container">
-                <p class="headline">מתחסנים מנה שנייה</p>
-            </div>
-            <div class="second-vaccine">
-                <p class="number">557</p>
-                <div class="added" style="display: flex;">
-                    <p class="value">-15</p>
-                    <p class="title">מחצות</p>
-                </div>
-            </div>
-        </div>
-        <div class="col deaths">
-            <div class="headline-container">
-                <p class="headline">נפטרים מצטבר</p>
-                <span class="info-icon">i</span>
-            </div>
-            <div class="info">
-                <p class="number">6,073</p>
-                <div class="daily-change" style="display: flex;">
-                    <span class="graph-icon"></span>
-                    <p class="title">מגמת שינוי יומית</p>
-                </div>
-            </div>
-        </div>
-        <div class="col positive-percentage">
-            <div class="headline-container">
-                <p class="headline">אחוז בדיקות חיוביות אתמול</p>
-                <span class="info-icon">i</span>
-            </div>
-            <div class="info">
-                <p class="number">1.9%</p>
-                <div class="added" style="display: flex;">
-                    <p class="value">65,323</p>
-                    <p class="title">בדיקות אתמול</p>
-                </div>
-                <div class="daily-change" style="display: flex;">
-                    <span class="graph-icon"></span>
-                    <p class="title">בדיקות יומיות</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">2</div>
-    <div class="row">3</div>
+    <app-general-info></app-general-info>
+    <app-vaccinated-index></app-vaccinated-index>
+    <app-vaccinated-by-age-city></app-vaccinated-by-age-city>
     <div class="row">4</div>
     <div class="row">5</div>
     <div class="row">6</div>
