--- a/src/app/covid-info/daily-recovers-and-deaths/daily-recovers-and-deaths.component.css
+++ b/src/app/covid-info/daily-recovers-and-deaths/daily-recovers-and-deaths.component.css
@@ -1,65 +1,46 @@
 .row {
     width: 97%;
-    margin: 0 auto;
+    margin:0 auto;
     margin-bottom: 30px;
-    height:430px;
-    border-radius: 10px;
+    height:350px;
+    justify-content: space-between;
+}
+.col-4{
+    width:33%;
+    height:100%;
     background-color: #fff;
+    border-radius: 10px;
 }
 .dark-mode{
     background-color: #384f5f;
     box-shadow: rgba(26,31,51,0.18) 0 8px 4px 0;
     color:white;
 }
-.dark-mode-changes{
-    background-color: #384f5f !important;
+.dark-mode .options .time .time-container {
+    background-color: transparent;
 }
-.dark-mode-changes .arrow {
-
-}
-.dark-mode-changes .download {
-
-}
-.headline{
-    height:18%;
-    justify-content: center;
-    align-content: center;
-    margin:0 auto;
-    font-size:22px;
-    font-weight: 700;
-    box-shadow: none !important;
-}
-.total-data{
-    height:82%;
-    display: flex;
-    width:100%;
-    padding:0;
-}
-.data{
-    height:100%;
-    border: 0.07rem solid #d0d0d4;
-    border-bottom: none;
-    border-radius: 0;
-}
-.left, .right{
-    border-left: none;
-    border-right: none;
+.dark-mode .note, .dark-mode .note-first {
+    background-color: #2a3b47;
 }
 .title-container {
-    height:60px;
-    width:96%;
+    height:50px;
+    width:90%;
     margin:0 auto;
     justify-content: space-between;
 }
 .title{
-
     width:40%;
     font-size: 1rem;
     font-weight: 700;
     position: relative;
 }
+.right {
+    width:60%;
+}
+.mid, .left{
+    width:35%;
+}
 .title p {
-
     position: absolute;
     bottom: 4px;
     right:2px;
@@ -77,7 +58,6 @@
 
 }
 .time-container{
-    display: flex;
     background-color: #f7f9fc;
     width:143px;
     height:32px;
@@ -140,12 +120,14 @@
     width:94%;
     margin: 0 auto;
 }
-.vaccine {
-    display: flex;
-    font-size: 14px;
+.vaccine-index{
+    padding-right:25px;
 }
-.vaccine p {
-    padding-left:15px;
+.line-left{
+    margin-top:8px;
+    width:15px;
+    height:3px;
+    background-color: rgb(240, 70, 94);
 }
 .dot {
     margin-top:6px;
@@ -153,52 +135,59 @@
     height:10px;
     width:10px;
     border-radius: 50%;
-    background-color: rgb(28, 125, 126);
-}
-.sec{
-    background-color: rgb(182, 202, 81);
-}
+    background-color: rgb(28, 125, 126);}
 .graph-container{
-    padding-top:20px;
     height:70%;
-    width:80%;
+    width:90%;
     margin: 0 auto;
+    margin-top:35px;
 }
 .left-graph{
     width:100%;
     height:100%;
 }
-.w-100 {
-    display: none;
+
+.note p {
+    padding:2px;
+    font-size: 11px;
+    margin: 0;
 }
-@media screen and (max-width:1100px){
-    .contain {
-        height: 1033px;
+.note{
+    margin-right:5%;
+    width:275px;
+    background-color: rgb(230 241 244);
+    display: inline-block;
+}
+.note-mid{
+    width:285px;
+}
+.vaccine {
+    display: flex;
+    font-size: 14px;
+}
+.vaccine p {
+    padding-left:16px;
+}
+@media screen and (max-width:1200px){
+    .row{
+        height:1150px;
+        justify-content: space-between;
     }
-    .headline{
-        height:8%;
-        font-size: 22px;
-    }
-    .total-data {
-        height:92%;
-        width:90%;
-    }
-    .data {
-        width:90%;
-        height: 30%;
-    }
-    .mid {
-        border-left: none;
-        border-right: none;
+    .col-4 {
+        height:31%;
+        width:100%;
     }
     .title-container{
-        height:50px;
+        width:96%;
     }
-    .data .left-graph {
+    .graph-container img {
         visibility: hidden;
     }
-    .w-100{
-        display: inline-block;
+    .index{
+        width:100%;
+    }
+    .note {
+        margin-right: 30px;
     }
 }
 @media screen and (max-width:900px){
