--- a/src/app/covid-info/vaccinated-by-age-city/vaccinated-by-age-city.component.css
+++ b/src/app/covid-info/vaccinated-by-age-city/vaccinated-by-age-city.component.css
@@ -1,26 +1,38 @@
 .row {
-    width: 97.2%;
+    width: 97%;
     margin:0 auto;
     margin-bottom: 30px;
-    height:348px;
+    height:350px;
     display: flex;
     justify-content: space-between;
 }
-
+.dark-mode{
+    background-color: #384f5f !important;
+    box-shadow: rgba(26,31,51,0.18) 0 8px 4px 0;
+    color:white;
+}
+.dark-mode .table-values {
+    background-color: #2a3b47;
+}
+.dark-mode input {
+    background-color: transparent;
+}
 .first{
-    width:66.5%;
+    height:100%;
+    width:66.4%;
     background-color: #fff;
     border-radius: 10px;
     padding:0;
 }
 .second {
-    width:33%;
+    height:100%;
+    width:32.8%;
     background-color: #fff;
     border-radius: 10px;
 }
 .title-container{
     width:95%;
-    height:70px;
+    height:65px;
     margin-bottom: 0;
     display: flex;
 }
@@ -28,6 +40,7 @@
     width:50%;
     display: flex;
     align-items: center;
+    box-shadow: none;
 }
 .title p {
     font-size: 15px;
@@ -35,6 +48,7 @@
 }
 .options{
     position: relative;
+    padding-left: 10px;
     display: flex;
     width:50%;
     align-items: center;
@@ -48,7 +62,7 @@
     position:absolute;
     padding: 0 20px;
     width:170px;
-    height:40px;
+    height:35px;
     left:75px;
     border: 0.1rem solid #e4e9f2;
     border-radius: 25px;
@@ -91,8 +105,240 @@ input {
     bottom:5px;
 }
 .cities-table {
+    height:280px;
     width:100%;
-    background-color: rebeccapurple;
     margin: 0;
 }
-
+.table-values{
+    width:99.7%;
+    height:55px;
+    margin-bottom: 0;
+    background-color: #e6f1f3;    
+}
+.cities-values-container{
+    margin-bottom: 0;
+    padding:0;
+    width:100%;
+    direction: ltr;
+    height:215px;
+    overflow-y: scroll;
+    display: flex;
+}
+.cities-values-container::-webkit-scrollbar-track
+{
+  border-radius: 15px;
+}
+.cities-values-container::-webkit-scrollbar
+{
+  width: 7px;
+}
+.cities-values-container::-webkit-scrollbar-thumb
+{
+  border-radius: 15px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #a5a1a1;
+}
+.col {
+    direction: rtl;
+}
+.coll {
+    text-align: center;
+    padding:0;
+    font-size: 14px;
+}
+.city-values{
+    padding:0;
+    width:100%;
+    height:50px;
+    margin: 0;
+    align-items: center;
+    border-bottom: 1px solid #e6f1f3 ;
+}
+.table-values{
+    display: flex;
+}
+.city-name {
+    margin-right:2px;
+    width:18%;
+    text-align: right;
+    font-weight: 700;
+    padding: 0;
+}
+.vaccinated {
+    display: flex;
+    width:15%;
+    font-size: 12px;
+    justify-content: center;
+    align-items: center;
+}
+.header {
+    align-items: unset;
+}
+.active-infected{
+    width:16%;
+}
+.ratio {
+    color: #a5a1a1;
+}
+.header {
+    font-size: 14px;
+}
+.sum {
+    justify-content: center;
+}
+.daily-grade{
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    background-color: rgb(184 222 146);
+    margin:0 auto;
+    width:30px;
+    border-radius: 3px;
+}
+.progress-bar-container {
+    direction: rtl;
+    height:11px;
+    width:40px;
+    background-color: rgb(239 245 249);
+}
+.progress-bar{
+    height:11px;
+    width:80%;
+    background-color:rgb(182 202 81) ;
+}
+.fi{
+    background-color: #1c7d7e;
+}
+.title-container2 {
+    height:45px;
+    width:96%;
+    margin:0 auto;
+    justify-content: space-between;
+}
+.title2{
+    width:70%;
+    font-size: 0.93rem;
+    font-weight: 700;
+    position: relative;
+}
+.title2 p {
+    position: absolute;
+    bottom: 4px;
+    right:2px;
+    margin:0;
+    padding:0;
+}
+.options2{
+    position:relative;
+    width:210px;
+}
+.arrow {
+    margin:0;
+    padding:0;
+    position: absolute;
+    top:2px;
+    left:15px;
+}
+.share2{
+    position: absolute;
+    left:45px; 
+    height:29px;
+    width:29px;
+    background-color: #fff;
+    border: 1px solid rgb(194, 193, 193);
+    border-radius: 50%;
+    position: absolute;
+    bottom:2px;
+}
+.share2 img {
+    position: absolute;
+    bottom:5px;
+    left:2px;
+}
+.download2 {
+    height:29px;
+    width:29px;
+    background-color: #fff;
+    border: 1px solid rgb(194, 193, 193);    
+    border-radius: 50%;
+    position: absolute;
+    left:10px;
+    bottom:2px;
+}
+.download2 img {
+    padding:0;
+    margin:0;
+    position: absolute;
+    left:5px;
+    bottom:5px;
+}
+.index{
+    height:20px;
+    width:94%;
+    margin: 0 auto;
+}
+.vaccine {
+    margin:0;
+    width:50%;
+    display: flex;
+    font-size: 15px;
+}
+.vaccine p {
+    padding-left:20px;
+}
+.dot {
+    margin-top:6px;
+    margin-left:2px;
+    height:10px;
+    width:10px;
+    border-radius: 50%;
+    background-color: rgb(28, 125, 126);
+}
+.sec{
+    background-color: rgb(182, 202, 81);
+}
+.graph-container{
+    padding-top:20px;
+    height:80%;
+    width:100%;
+    margin: 0 auto;
+}
+.graph{
+    width:100%;
+    height:100%;
+}
+.headline {
+    box-shadow: none;
+}
+.w-100{
+    display: none;
+}
+@media screen and (max-width:1200px){
+    .contain{
+        height:750px;
+        flex-direction: column;
+    }
+    .first, .second {
+        width:100%;
+        height:48%;
+    }
+    .cities-table{
+        height:300px;
+    }
+    .w-100{
+        display: inline-block;
+    }
+    .index {
+        margin:0;
+        margin-right:30px;
+        width:400px;
+    }
+    .graph-container img {
+        visibility: hidden;
+    }
+}
+@media screen and (max-width:900px){
+    .row{
+        width:98.5%;
+    }
+}
